--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myanimelist",
   "version": "0.0.1",
   "private": true,
+  "homepage": "http://itskreisler.github.io/myanimelist",
   "dependencies": {
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.1",
@@ -21,11 +22,16 @@
     "@types/react-router-dom": "^5.1.7",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.5",
+    "react-platform-js": "^0.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-use": "^17.4.0",
+    "rooks": "^7.4.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -42,13 +48,20 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs",
+    "docs": "react-scripts build && mv build docs",
+    "local": "npx serve -s docs",
+    "build-android": "npx cap add android",
+    "build-resources": "npx cordova-res android --skip-config --copy",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
+      "standard",
       "react-app",
       "react-app/jest"
     ]
@@ -66,7 +79,10 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.6.1"
+    "@capacitor/cli": "4.6.1",
+    "gh-pages": "^4.0.0",
+    "sass": "^1.57.1",
+    "standard": "^17.0.0"
   },
   "description": "An Ionic project"
 }
