--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myanimelist",
+  "name": "anime",
   "version": "0.0.1",
   "private": true,
-  "homepage": "http://itskreisler.github.io/myanimelist",
+  "homepage": "http://itskreisler.github.io/anime",
   "dependencies": {
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.1",
